--- a/subjectB.html
+++ b/subjectB.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML/CSSの紹介</title>
 </head>
 <body>
-    <h1></h1>
-    <p></p>
-    <img src="" alt="">
+    <h1>HTML/CSS</h1>
+    <p>HTMLはハイパーテキストを記述するためのマークアップ言語、CSSはHTML や XML の要素をどのように修飾するかを指示する仕様</p>
+    <img src="img/html.jpg" alt="HTML/CSSのイメージ画像">
 </body>
 </html>
