--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <img src="img/jyobijyobi.png" alt="ジョビジョビくん">
     <a href="#">科目A</a>
-    <a href="#">科目B</a>
+    <a href="subjectB.html">HTML/CSS</a>
 </body>
 </html>
