--- a/subjectA.html
+++ b/subjectA.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>アルゴリズムの紹介</title>
 </head>
 <body>
-    <h1></h1>
-    <p></p>
-    <img src="" alt="">
+    <h1>アルゴリズム</h1>
+    <p>アルゴリズムとは、ある問題を解決する方法や、ある目標を完了するための方法が書かれた一連の「手順」のこと。 </p>
+    <img src="img/アルゴリズム.png" alt="アルゴリズムのイメージ画像">
 </body>
 </html>
